--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: The exciting journeys of boring people
+author: Patryk
+email: patkowalski89@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm glad you are here. I plan to talk about ... Some cool things you can do with your *GitHub* account.
+This will be the **first** made-by-me page.
 
 # social links
 twitter_username: your-twitter-handle
@@ -12,4 +11,4 @@ github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-architect
+theme: minima
