--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+---
+title: "blog"
+date: 2018-12-19
+---
+
 title: The exciting journeys of boring people
 author: Patryk
 email: patkowalski89@gmail.com
