--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "blog"
 date: 2018-12-19
 ---
 
-title: The exciting journeys of boring people
+title: "The exciting journeys of boring people"
 author: Patryk
 email: patkowalski89@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
