--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 ---
-title: "title"
-date: yyyy-mm-dd
+title: "Your blog post title"
+date: YYYY-MM-DD
 ---
-
 title: "The exciting journeys of boring people"
 author: Patryk
 email: patkowalski89@gmail.com
